# bundeswas

./: .env  .gitignore  .gitlab-ci.yml  0_plenarprotokoll.txt  2_plenarprotokoll.txt  Dockerfile  README.md  base_config.cfg  db.txt  docker-compose.yml  go.mod  go.sum  labels.json  main.go  ogen_config.yaml  openapi.yaml  playground.ipynb  plenarprotokoll2.txt  spacy.ipynb  training.ipynb  valid.json
.github/workflows/: cob.yml
.ipynb_checkpoints/: playground-checkpoint.ipynb  spacy-checkpoint.ipynb  training-checkpoint.ipynb
cmd/: api.go  fetchall.go
cmd/download/: main.go
cmd/playground/: main.go
cmd/server/: main.go
data/: camp_train.spacy
database/: database.go
dip/: Cargo.toml  client.go  client_test.go  dip.gen.go  dip.go  extras.go  model.go  oas_cfg_gen.go  oas_client_gen.go  oas_interfaces_gen.go  oas_json_gen.go  oas_parameters_gen.go  oas_request_encoders_gen.go  oas_response_decoders_gen.go  oas_schemas_gen.go  oas_security_gen.go  oas_validators_gen.go
dip/src/: lib.rs  model.rs
documents/: document.go
download/src/: formats.rs  main.rs
fetch/: fetch.go
first/: template.yaml
first/hello/: main.go
frontend/: .eslintrc.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  Footer.vue  HomeView.vue  Navbar.vue
frontend/src/assets/: micro.png:Zone.Identifier
frontend/src/components/: FooterElement.vue
frontend/src/sections/: AboutSection.vue  MainSection.vue  ServiceSection.vue
infra/: .terraform.lock.hcl  main.tf
modules/src/config/: mod.rs
modules/src/routes/: mod.rs  some_file.rs
ner/.ipynb_checkpoints/: 0_basics-checkpoint.ipynb  1_custom_ner-checkpoint.ipynb
ner/0_basics/: 0_basics.ipynb  0_basics.py
ner/0_basics/.ipynb_checkpoints/: 0_basics-checkpoint.ipynb
ner/1_convert/: 11_apply_custom_ner.ipynb  1_custom_ner.ipynb  base_config.cfg  config.cfg  train.spacy
ner/1_convert/.ipynb_checkpoints/: 11_apply_custom_ner-checkpoint.ipynb
ner/1_convert/model-best/: meta.json
ner/1_convert/model-best/ner/: model
ner/1_convert/model-last/: config.cfg  meta.json
ner/1_convert/model-last/ner/: model  moves
ner/1_convert/model-last/vocab/: strings.json
ner/2_custom/: config.cfg  convert.ipynb  dev_v2.spacy  labels.json  train.spacy  train_v2.spacy
ner/2_custom/.ipynb_checkpoints/: convert-checkpoint.ipynb
ner/3_nexttry/: 2022-11-22.json  apply.ipynb  train.spacy
ner/3_nexttry/.ipynb_checkpoints/: apply-checkpoint.ipynb
ner/3_nexttry/inhaltsverzeichnisse/: 2022-11-22.txt  2022-11-23.txt  2022-11-30.txt  2022-12-02.txt
ner/4_full/plenarprotokolle/: 2022-11-22.json  2022-11-23.json  2022-11-24.json  2022-11-25.json  2022-11-30.json  2022-12-01.json  2022-12-02.json
ner/inhaltsverzeichnisse/: 2022-11-24.txt
ner/plenarprotokolle/: 1_plenarprotokoll.json  1_plenarprotokoll.txt  2_plenarprotokoll.json  3_plenarprotokoll.txt
old/: training.ipynb
plenarprotokolle/: db.txt  plenarprotokolle.go
resource/: aktivitaet.go  plenarprotokoll.go  vorgang.go  vorgangsposition.go
search/: interface.go
search/file/: search.go
server/: .env  Cargo.toml
server/db/: Cargo.toml
server/db/src/: main.rs
server/dip/: Cargo.toml  aktivitaet.rs  lib.rs  plenarprotokoll.rs
server/dip/src/: lib.rs  model.rs
server/download/: Cargo.toml
server/download/inhaltsverzeichnisse/: 2022-11-25.txt  2022-12-01.txt
server/download/plenarprotokolle/: 2022-09-06.json  2022-09-06.txt  2022-09-07.json  2022-09-07.txt  2022-09-08.json  2022-09-08.txt
server/download/src/: download.rs  main.rs  matcher.rs
server/http/: Cargo.toml
server/http/src/: main.rs
server/import/: Cargo.toml
server/import/src/: aktivitaeten.rs  main.rs
server/modules/src/: main.rs
server/neo4j/: Cargo.toml
server/nonblock/: Cargo.toml
server/nonblock/src/: main.rs
server/parser/: Cargo.toml  output.txt
server/parser/src/: main.rs
server/poller/: Cargo.toml  main.rs
server/postgres/: Cargo.toml
server/postgres/src/: main.rs
server/print/src/: main.rs
server/src/: main.rs
server/src/db/: main.rs
server/src/dip/: dip.rs  resources.rs
server/src/generics/: main.rs
server/src/poll/: main.rs
server/src/poller/: main.rs
sql/: schema.sql
store/: database.go
summary/: summarize.go
web/: package.json
web/public/: index.html
web/src/: App.vue  main.js
web/src/components/: Plenarprotokoll.vue
website/: package-lock.json  package.json
website/src/: app.html  store.js
website/src/routes/: +page.svelte
website/static/: laws (1).png:Zone.Identifier  laws.png:Zone.Identifier
