[package]
name = "wasletztegesetz"
version = "0.1.0"
authors = ["Julien Midedji <julien.midedji@gmail.com>"]
description = """
wasletztegesetz is a web application showing Bundestagsabstimmungen
"""
edition = "2021"

[[bin]]
name = "wasletztegesetz"
path = "poller/main.rs"

# I'm using workspaces because of "rust-analyzer failed to find workspace" error in my editor.
[workspace]
members = [ "poller", "dip" ]
