[package]
name = "wasletztegesetz"
version = "0.1.0"
authors = ["Julien Midedji <julien.midedji@gmail.com>"]
description = """
wasletztegesetz is a web application showing Bundestagsabstimmungen
"""
edition = "2021"

[[bin]]
name = "print"
path = "print/src/main.rs"

[[bin]]
name = "import"
path = "import/src/main.rs"

[[bin]]
name = "http"
path = "http/src/main.rs"

[[bin]]
name = "download"
path = "download/src/main.rs"

[workspace]
members = [ "print", "dip", "neo4j", "import", "http", "download" ]

# I'm only doing this because of my LSP not calming down
[dependencies]
dip = { path = "./dip" }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

log = "0.4.0" # TODO
env_logger = "0.9.3"    # TODO

# HTTP Server
axum = "0.6.0"          

# JSON Serializing
serde = { version = "1.0.147", features = ["derive"]}   
serde_json = "1.0"

# Middleware
tower = "0.4.13"
# CORS
tower-http = { version = "0.3.4", features = ["cors", "trace"]}
