[package]
name = "dip"
version = "0.1.0"
edition = "2021"

[lib]
name = "dip"
path = "lib.rs"

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }

# json serializing
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0"

# pretty json for debugging
jsonxf = "1.1.1"
