[package]
name = "dip"
version = "0.1.0"
edition = "2021"

[lib]
name = "dip"
path = "lib.rs"

[dependencies]
ureq = "2.5.0"                                          # http client
serde = { version = "1.0.147", features = ["derive"]}   # json serializing
serde_json = "1.0"
jsonxf = "1.1.1"                                        # pretty json for debugging
