[package]
name = "download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
dip = { version = "0.1.0", path = "../dip" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
spinners = "4.1.0"
