[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
log = "0.4.0"           # TODO
env_logger = "0.9.3"    # TODO

serde = { version = "1.0.147", features = ["derive"]}   # json serializing
serde_json = "1.0"
